added push notifications , global notifications , changed icon , changed title , changed name ,  made changes in WebView

--- a/flutter02/android/app/src/main/AndroidManifest.xml
+++ b/flutter02/android/app/src/main/AndroidManifest.xml
@@ -6,7 +6,7 @@
 
     <application
         android:usesCleartextTraffic="true"
-        android:label="flutter01"
+        android:label="Farmlancer"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
 
